[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/chao.gd" type="Script" id=3]
[ext_resource path="res://scripts/Level.gd" type="Script" id=4]
[ext_resource path="res://scenes/Slime.tscn" type="PackedScene" id=5]
[ext_resource path="res://Global.tres" type="Resource" id=6]
[ext_resource path="res://scenes/GUI.tscn" type="PackedScene" id=7]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 517.743, 10 )

[node name="Level" type="Node2D"]
script = ExtResource( 4 )
g = ExtResource( 6 )
Mob = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 262.963, 421.809 )
g = ExtResource( 6 )

[node name="chao" type="StaticBody2D" parent="."]
position = Vector2( 220.591, 599.939 )
collision_layer = 4
collision_mask = 0
physics_material_override = SubResource( 1 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="chao"]
position = Vector2( 292.097, -0.601013 )
shape = SubResource( 2 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="MobTimer2" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="GUI" parent="." instance=ExtResource( 7 )]
anchor_right = 0.0

[node name="ScoreCounter" type="Timer" parent="."]
autostart = true
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="MobTimer2" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreCounter" to="." method="_on_ScoreCounter_timeout"]
